<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6">


<!-- Scrollable content -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#060644"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/back_button"
                    android:layout_margin="25dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center_vertical"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="App Tutorial"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <!-- Intro text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting_started_with_eyedtrack"
                android:textColor="#060644"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <!-- Slider container -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="16dp"
                android:text="@string/getting_start_info"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorHeight="0dp"
                    app:tabMode="fixed"
                    app:tabGravity="center" />
            </LinearLayout>

            <!-- (If you have any additional content below the slider, put it here) -->

        </LinearLayout>
    </ScrollView>

    <!-- Bottom navigation bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/home_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:src="@drawable/home"
                android:contentDescription="@string/home"/>
        </LinearLayout>

        <!-- Profile -->
        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@id/homeLayout"
            app:layout_constraintEnd_toStartOf="@id/settingsLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/profile_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:src="@drawable/profile"
                android:contentDescription="@string/profile"/>
        </LinearLayout>

        <!-- Settings -->
        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/settings_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:src="@drawable/settings"
                android:contentDescription="@string/settings"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
