<?xml version="1.0" encoding="utf-8"?>
<!-- Main container using ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Header with back button and title -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#060644"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Back button -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="25dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/back_button"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />

        <!-- Screen title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EULA"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Scrollable EULA content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar">

        <!-- EULA text container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- EULA text -->
            <TextView
                android:id="@+id/eula_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:fontFamily="Calibre"
                android:lineSpacingExtra="6dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Bottom navigation bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Home button -->
        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/home_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home"
                android:src="@drawable/home" />
        </LinearLayout>

        <!-- Profile button -->
        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/homeLayout"
            app:layout_constraintEnd_toStartOf="@id/settingsLayout">

            <ImageButton
                android:id="@+id/profile_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile" />
        </LinearLayout>

        <!-- Settings button -->
        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/settings_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/settings"
                android:src="@drawable/settings" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>